[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/Enemy1.png" type="Texture" id=1]
[ext_resource path="res://Enemy1.gd" type="Script" id=2]
[ext_resource path="res://Explosion.tscn" type="PackedScene" id=3]
[ext_resource path="res://Gun1.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]

[node name="Enemy1" type="Node2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1.90735e-06, 0 )

[node name="Gun1" parent="." instance=ExtResource( 4 )]
position = Vector2( -14, 0 )

[node name="EnemyFireTimer" type="Timer" parent="."]
wait_time = 0.8
autostart = true

[node name="Explosion" parent="." instance=ExtResource( 3 )]

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 1 )
offset = Vector2( -1, -1 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="EnemyFireTimer" to="." method="_on_EnemyFireTimer_timeout"]
